# CustomerChurn_PredictionModel

./: README.md  main.py  pyproject.toml
.github/workflows/: greetings.yml
Deployment/: app.py
customerchurn_predictionmodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: churn_model.pkl
research/: model.ipynb
src/: data_ingestion.py  data_preprocessing.py  model_building.py
src/customerchurn_predictionmodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
