[project]
name = "customerchurn-predictionmodel"
version = "1.0.0"
description = "Customer Churn Prediction Model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flaml[automl]>=2.5.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
]
